<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>particle_filter</name>
  <version>0.0.0</version>
  <description>C++ Particle filter for roboracer</description>
  <maintainer email="nicolas.lauzon.4@ulaval.ca">Nicolas Lauzon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>range_libc</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
